--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-﻿#INFLUXDB_TOKEN="hi2RcEOpzkMUGvulCnBwueNRg6jq4-GSgbdAilOnmnSxoDV8m-TluV5kPQoDQVlBvHqeZHvoxjsb2G5tvKFRkA=="
-INFLUXDB_TOKEN=hi2RcEOpzkMUGvulCnBwueNRg6jq4-GSgbdAilOnmnSxoDV8m-TluV5kPQoDQVlBvHqeZHvoxjsb2G5tvKFRkA==
+﻿INFLUXDB_TOKEN=t23tnU0Fs3iNtbvUJwAKiuLiqWM85oC8_f4DaosGayfkDSOJGcaMf5kRRGhXXVhe4eeEOBt7hw6DJhCP_PDl9g==
