--- a/compose.yml
+++ b/compose.yml
@@ -11,7 +11,7 @@ services:
         condition: service_healthy
     networks:
       backend:
-        ipv4_address: 10.0 .0.3
+        ipv4_address: 10.0.0.3
       frontend:
   db:
     image: influxdb:2
@@ -24,8 +24,8 @@ services:
       - DOCKER_INFLUXDB_INIT_MODE=setup
       - DOCKER_INFLUXDB_INIT_USERNAME=Admin123
       - DOCKER_INFLUXDB_INIT_PASSWORD=Admin123
-      - DOCKER_INFLUXDB_INIT_ORG=org
-      - DOCKER_INFLUXDB_INIT_BUCKET=bucket
+      - DOCKER_INFLUXDB_INIT_ORG=heat_variant
+      - DOCKER_INFLUXDB_INIT_BUCKET=variant
     healthcheck:
       test: "curl -f http://localhost:8086/ping"
       interval: 3s
