Dockerfile updated with a watch. .gitignore and .dockerignore updated.

--- a/Backend/compose.yml
+++ b/Backend/compose.yml
@@ -1,7 +1,11 @@
 services:
-  server:
+  api:
     build:
       context: .
+    develop:
+      watch:
+        - action: rebuild
+          path: .
     env_file:
       - .env
     ports:
