MySQL connection setup. - Creates HeatVariant db if it doesn't exist, as well as the Apartments table.

--- a/Backend/compose.yml
+++ b/Backend/compose.yml
@@ -38,6 +38,7 @@ services:
     networks:
       backend:
         ipv4_address: 10.0.0.3
+      frontend:
   influx:
     image: influxdb:2
     restart: always
